--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     padding: auto;
     text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 a {
     text-decoration: none;
@@ -18,7 +19,7 @@ a {
     display: flex;
     justify-content: space-between;
     padding: 20px;
-    background-color: black;
+    background-color: rgb(41, 36, 36);
     color: aliceblue;
     
 }
@@ -37,6 +38,26 @@ a {
     background-color: #1f2937;
     color: #f9faf8;
     align-items: center;
+    
+
+}
+.random {
+    padding: 50px;
+    color: black;
+    font-size: 2.5rem;
+}
+.random-img {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+   
+}
+.img-all {
+    border: 3px solid blue;
+    border-radius: 5%;
+}
+.section2 {
+    background-color: rgb(253, 233, 233);
     
 
 }
