Adjust Quotes padding

--- a/styles.css
+++ b/styles.css
@@ -85,9 +85,6 @@ a {
     padding: 50px;
 }
 .quote-auther {
-    padding: auto 30px 30px auto;
+    padding: 0 100px 50px 0;
     text-align: end;
-}
-.auther {
-    padding-bottom: 20px;
 }
