--- a/styles.css
+++ b/styles.css
@@ -76,8 +76,8 @@ a {
 }
 .quotes {
     padding: 100px;
-    background-color: #8f8989;
-    color: white;
+    background-color: #dad3d3;
+    color: black;
     margin: 0px;
     font-size: 1.5rem;
     font-weight: bold;
