--- a/styles.css
+++ b/styles.css
@@ -89,10 +89,41 @@ a {
 .description {
     margin-left: 100px;
 }
-.signup {
-    background-color: #eb5d6b;
-}
 .footer {
     background-color: #f8aab2;
-    padding: 30px;
+    padding: 50px;
+}
+.signup-container {
+    display: flex;
+    background-color: rgb(184, 85, 85);
+    margin: 50px 300px;
+    padding: 30px 10px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 15px;
+}
+.signup {
+    display: flex;flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 0 10px 50px;
+    font-size: 2rem;
+}
+.btn2 {
+    background-color: #3883f6;
+    border-radius: 12px;
+    font-size: 20px;
+    border: none;
+    padding: 25px 30px;
+    margin-left: 200px;
+    color: white;
+    
+}
+.sign-para {
+    font-size: medium;
+
+}
+.signup-containers {
+    background-color: #5e1920;
+    padding: 10px 0px;
 }
