--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,9 @@ a {
 }
 .quotes {
     padding: 100px;
+    /* background-color: #5e1920; */
     background-color: #a5313d;
+    
     margin: 0px;
     font-size: 1.5rem;
     font-weight: bold;
@@ -89,13 +91,13 @@ a {
 .description {
     margin-left: 100px;
 }
-.footer {
-    background-color: #f8aab2;
-    padding: 50px;
+.signup-containers {
+    background-color: #5e1920;
+    padding: 10px 0px;
 }
 .signup-container {
     display: flex;
-    background-color: rgb(184, 85, 85);
+    background-color: #a5313d;
     margin: 50px 300px;
     padding: 30px 10px;
     align-items: center;
@@ -123,7 +125,9 @@ a {
     font-size: medium;
 
 }
-.signup-containers {
-    background-color: #5e1920;
-    padding: 10px 0px;
+.footer {
+    background-color: #c55863;
+    padding: 50px;
+    font-size: medium;
+    font-weight: 500;
 }
